Fixed left-align issue for About section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,14 +26,18 @@ body {
 
 }
 
+.indexsection {
+    margin-left: 0;
+}
 section {
     box-sizing: border-box;
     margin-top: 10px;
-    margin-bottom: 200px;
     margin-right: 25%;
+    margin-bottom: 200px;
+    margin-left: 11.45%;
     background-color: teal;
     color: white;
-    text-align: center;
+    text-align: left;
     
 }
 
@@ -83,7 +87,6 @@ hr {
     margin-left: 40px;
     margin-bottom: 5px;
 }
-
 
 
 
